Fix select overflow bug, close #6621

--- a/components/select/style/index.less
+++ b/components/select/style/index.less
@@ -281,7 +281,9 @@
     .@{select-prefix-cls}-search--inline {
       width: auto;
       padding: 0;
+      max-width: 100%;
       .@{select-prefix-cls}-search__field {
+        max-width: 100%;
         width: 0.75em;
       }
     }
